[project]
name = "py-vmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "dateparser>=1.3.0",
    "freezegun>=1.5.5",
    "platformdirs>=4.9.4",
    "pytest>=9.0.2",
    "types-dateparser>=1.3.0.20260211",
]

[project.scripts]
vmt = "py_vmt.cli:cli"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Timezone offset does not match system offset:UserWarning",
]
